--- a/client/stylesheets/containers/UserProfile.scss
+++ b/client/stylesheets/containers/UserProfile.scss
@@ -8,6 +8,7 @@
   flex-direction: row;
   @media only screen and (max-width: 480px){
     flex-direction: column;
+    height: auto;
   }
   .user_stats{
     display: flex;
@@ -29,6 +30,9 @@
       &__picture{
         height: 240px;
         width: 240px;
+      }
+      a {
+        font-size: 2em;
       }
     }
     .user_score{
@@ -60,6 +64,12 @@
     align-items: stretch;
     @media only screen and (max-width: 480px){
       width: 100%;
+    }
+    &__no_skills{
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
     &__header{
       width: 100%;
