--- a/client/stylesheets/containers/ProjectList.scss
+++ b/client/stylesheets/containers/ProjectList.scss
@@ -55,6 +55,19 @@
       width: 100%;
     }
   }
+  &__filters{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-left: 5em;
+    input {
+      width: auto;
+    }
+    @media only screen and (max-width: 480px){
+      margin-left: 0;
+    }
+  }
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
