--- a/client/stylesheets/components/LandingPage.scss
+++ b/client/stylesheets/components/LandingPage.scss
@@ -3,7 +3,7 @@
   padding:0;
   display:flex;
   flex-direction: column;
-  height:100%;
+  // height:100%;
   letter-spacing: 2.5px;
   .landing{
     padding:0;
