--- a/client/stylesheets/components/LandingPage.scss
+++ b/client/stylesheets/components/LandingPage.scss
@@ -18,7 +18,7 @@
     text-align: center;
     // text-decoration doesnt work.
     @media only screen and (max-width: 480px){
-      height: 100%;
+      // height: 100%;
     }
     &.intro {
       .title{
