--- a/client/stylesheets/components/Appbar/Appbar.scss
+++ b/client/stylesheets/components/Appbar/Appbar.scss
@@ -135,28 +135,32 @@
     }
     .profile_menu{
       position: absolute;
-      top: 65px;
-      border: 1px solid #ccc;
-      right: 2.5em;
+      top: 5.8em;
+      border: 1px solid #cacaca;
+      right: .91em;
       z-index: 999;
       background: #fcf7ff;
       display: none;
-      width: auto;
+      /* width: auto; */
       height: auto;
-      border-radius: 4px;
+      /* border-radius: 4px; */
 
       &__item {
-        width: 100px;
         display: block;
         padding: 1em;
-        background: $white;
-        border-bottom: $border;
+        background: #f8f8f8;
+        border-bottom: 1px solid #E2E2E2;
         text-align: center;
-        font-size: 10px;
+        font-size: 12px;
         cursor: pointer;
-        color: $black;
+        color: #52489c;
+        width: 125px;
+        box-shadow: 2px 3px 3px rgba(55, 55, 55, 0.16);
         span{
           margin-right: 1em;
+        }
+        &:hover{
+          background: #ece3ff ;
         }
       }
 
