--- a/client/stylesheets/components/ProjectChip.scss
+++ b/client/stylesheets/components/ProjectChip.scss
@@ -1,16 +1,21 @@
-.project_card{
-  width: 75%;
+.project_card {
+  width: 90%;
   height: auto;
   padding: 15px;
   padding-top: 0;
   display: flex;
-  background: #f8f9fc;
+  background: $project-card-background;
+  margin-bottom: 5px;
+  border: $project-card-border;
+  transition: box-shadow 0.16s ease-in-out;
+
   @media only screen and (max-width: 480px){
     flex-direction: column;
     border-bottom: 1px solid #020202;
     width: 90%;
   }
   &__owner{
+    margin-right: 10px;
     flex: 1;
     @media only screen and (max-width: 480px){
       text-align: center;
@@ -33,8 +38,8 @@
     flex-direction: column;
 
     .name{
-      h3 {
-        margin-bottom: 0;
+      h2 {
+        margin-bottom: 0 !important;
       }
     }
     .category{
@@ -93,8 +98,7 @@
   }
 
   &__actions{
-    flex: 1;
-    padding: 15px;
+    padding-top: 15px;
     a {
       background: none;
       // border: 1px solid #52489c;
@@ -114,4 +118,8 @@
       text-align: center;
     }
   }
+}
+
+.project_card:hover {
+  box-shadow: 1px 3px 3px rgba(49, 49, 49, 0.37);
 }
