--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -29,6 +29,14 @@ $light-blue: #A29BD4;
 $accent: #FF7400;
 $border: 1px solid #E2E2E2;
 
+// project chip | card
+$project-card-border: 1px solid #bbbbbb;
+$project-card-background: #F5F5F5;
+$a-link: #5c00ff;
+$a-visited-link: #5c00ff;
+
+
+
 
 $text: #000000;
 $box-shadow: 0 1px 2px rgba(0,0,0,.1);
@@ -40,6 +48,9 @@ html {
   letter-spacing: 1px;
 }
 
+h3 {
+  font-weight: 500;
+}
 
 body{
   padding:0;
@@ -60,7 +71,7 @@ html, body{
 }
 
 button{
-  padding: 5px;
+  padding: 10px;
   border: none;
   font-family: 'Ubuntu';
   letter-spacing: 1px;
@@ -70,13 +81,20 @@ button{
     padding:3px;
     font-size: 10px;
   }
+  &:focus {
+    outline: none !important;
+  }
 }
 
 a {
   outline: none;
   text-decoration: none;
+  color: #5c00ff;
   &:visited {
-    color: $black;
+    color: #5c00ff;
+  }
+  &:active{
+    color: #5c00ff;
   }
 }
 
