--- a/client/stylesheets/containers/ProjectList.scss
+++ b/client/stylesheets/containers/ProjectList.scss
@@ -53,6 +53,7 @@
     -webkit-font-smoothing: auto;
     @media only screen and (max-width: 480px){
       width: 100%;
+      text-align: center;
     }
   }
   &__filters{
