added alternating chat colors

--- a/client/stylesheets/components/message.scss
+++ b/client/stylesheets/components/message.scss
@@ -1,5 +1,5 @@
 .new_message {
-  background: $white;
+  //background: $white;
   box-shadow: $box-shadow;
   padding: 5px 10px;
   position: relative;
@@ -39,4 +39,12 @@
     background: #F8F3F3;
     text-align: center;
   }
+}
+
+.new_message:nth-of-type(odd) {
+    background: $white;
+}
+
+.new_message:nth-of-type(even) {
+    background: #e6e6e6;
 }
