--- a/client/stylesheets/components/message.scss
+++ b/client/stylesheets/components/message.scss
@@ -7,6 +7,8 @@
   display: flex;
   flex-direction: row;
   &__avatar{
+    display: flex;
+    align-items: center;
     .user_avatar{
       img{
         height: 35px;
@@ -46,5 +48,5 @@
 }
 
 .new_message:nth-of-type(even) {
-    background: #e6e6e6;
+    background: #EFEFEF;
 }
