--- a/client/stylesheets/containers/ProjectDetail.scss
+++ b/client/stylesheets/containers/ProjectDetail.scss
@@ -77,11 +77,6 @@
         margin-bottom: 5px;
       }
     }
-
-    &__edit_project,
-    &__join_project{
-      margin-top: 1.5em;
-    }
   }
 
   .secondary_content{
@@ -99,7 +94,13 @@
     &__action_buttons{
       text-align: right;
       padding-right: 10px;
-      button{
+
+      @media only screen and (max-width: 480px){
+        text-align: center;
+      }
+    }
+    &__CTA{
+      button {
         background: $dark-blue;
         border-radius: 4px;
         color: $ghost-white;
@@ -107,8 +108,11 @@
         padding: 10px;
         cursor: pointer;
       }
-      @media only screen and (max-width: 480px){
-        text-align: center;
+
+      .member_buttons,
+      .admin_buttons{
+        display: flex;
+        flex-direction: column;
       }
     }
   }
