--- a/client/stylesheets/containers/Tasklist.scss
+++ b/client/stylesheets/containers/Tasklist.scss
@@ -2,9 +2,16 @@
   width: 100%;
   display: flex;
   height: 100%;
-  .task_names,
-  .task_description{
-    width: 50%
+  .task_names{
+    width: 100%;
+  }
+  .task_names{
+    h1{
+      text-align: center;
+    }
+    .add_task{
+      margin-left: 10px;
+    }
   }
   .no_tasks_added{
     width:100%;
