--- a/client/stylesheets/containers/Tasklist.scss
+++ b/client/stylesheets/containers/Tasklist.scss
@@ -11,6 +11,12 @@
     }
     .add_task{
       margin-left: 10px;
+      margin-top: 10px;
+      background: $blue;
+      font-size: 1em;
+      border-radius: 4px;
+      color: $white;
+      cursor: pointer;
     }
   }
   .no_tasks_added{
