--- a/client/stylesheets/components/Sidebar.scss
+++ b/client/stylesheets/components/Sidebar.scss
@@ -18,6 +18,14 @@
     // left: 100%;
   }
 
+  .close-sidebar{
+    position: absolute;
+    right: 0.5em;
+    font-size: 1.5em;
+    cursor: pointer;
+    top: 0.5em;
+  }
+
   &.sidebar--open{
     left: 0px;
     @media only screen and (max-width: 480px){
