--- a/client/stylesheets/containers/Tasklist.scss
+++ b/client/stylesheets/containers/Tasklist.scss
@@ -2,6 +2,14 @@
   width: 100%;
   display: flex;
   height: 100%;
+  @media only screen and (max-width: 480px){
+    // text-align: center;
+  }
+  .add-task{
+    color: $white;
+    background: $blue;
+    border-radius: 4px;
+  }
   .task_names{
     width: 100%;
   }
@@ -17,6 +25,10 @@
       border-radius: 4px;
       color: $white;
       cursor: pointer;
+      @media only screen and (max-width: 480px){
+        padding: 5px;
+        font-size: 1.5em;
+      }
     }
   }
   .no_tasks_added{
@@ -80,6 +92,14 @@
       flex: 8;
       textarea {
         height: 90%;
+      }
+    }
+    .submit{
+      background: $blue;
+      color: $white;
+      border-radius: 4px;
+      &.disable{
+        background: $dark-gray;
       }
     }
   }
